# CppND-System-Monitor

./: CMakeLists.txt  Makefile  README.md
include/: command.h  linux_parser.h  process.h  system.h
mac/etc/: os-release  passwd
mac/proc/: cpuinfo  meminfo  stat  uptime  version
src/: command.cpp  format.cpp  linux_parser.cpp  main.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
